--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .main-container {
   height: 100%;
   width: 100%;
-  background-color: var(--light-mode-bg);
+ background-color: #fff;;
 }
 
 .main-container.dark {
