--- a/src/components/country/country.css
+++ b/src/components/country/country.css
@@ -10,14 +10,16 @@
   }
   
   .country-card {
+    background-color: rgb(240, 238, 240);
     max-width: 20%;
-    background-color: var(--color-white);
+  
     margin-right: 4rem;
     margin-bottom: 8rem;
     cursor: pointer;
     text-decoration: none;
-    box-shadow: 5px 5px 10px 0px #dfd5d5;
+    box-shadow: 5px 5px 10px 0px #997d7d;
     color: var(--light-mode-text);
+    border-radius: 50px;
   }
   
   .main-container.dark .country-card {
@@ -30,6 +32,8 @@
     display: block;
     width: 100%;
     height: 50%;
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
   }
   
   .country-content {
