--- a/src/components/input/search/search.css
+++ b/src/components/input/search/search.css
@@ -5,8 +5,15 @@
     width: 30%;
     padding: 1rem 2rem;
     border-radius: 1rem;
+   
   }
   
+.search-container:hover{
+ 
+  border: 0.5px solid rgb(188, 67, 67);
+  border-radius: 50px;
+
+}
   .main-container.dark .search-container {
     background-color: var(--dark-blue-elements);
   }
@@ -21,14 +28,13 @@
   
   .search-container form {
     flex: 1;
+   
   }
   
   .search-input {
     font-family: "Nunito Sans", sans-serif;
-  
-    border: none;
+border: none;
     width: 100%;
-  
     padding: 1rem;
   }
   
